# flutter_application_pluging_scratch

./: README.md  pubspec.yaml
lib/: main.dart
libraries/window_monitor/hardware_monitor_windows/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Lib.vcxproj  Lib.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  hardware_monitor.vcxproj  hardware_monitor_windows.cpp  hardware_monitor_windows.def  hardware_monitor_windows.h  hardware_monitor_windows.sln  hardware_monitor_windows.vcxproj  hardware_monitor_windows.vcxproj.filters
libraries/window_monitor/hardware_monitor_windows/Lib.dir/Release/: Lib.dll.recipe  Lib.lib.recipe
libraries/window_monitor/hardware_monitor_windows/Lib.dir/Release/Lib.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Lib.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
libraries/window_monitor/hardware_monitor_windows/Release/: Lib.exp  Lib.lib
libraries/window_monitor/hardware_monitor_windows/hardware_monitor.dir/Release/: hardware_monitor.exe.recipe
libraries/window_monitor/hardware_monitor_windows/x64/Debug/: hardware_monitor_windows.exe.recipe  hardware_monitor_windows.ilk  hardware_monitor_windows.vcxproj.FileListAbsolute.txt  vc143.idb
libraries/window_monitor/hardware_monitor_windows/x64/Release/: hardware_monitor_windows.exe.recipe  hardware_monitor_windows.iobj  hardware_monitor_windows.ipdb  hardware_monitor_windows.vcxproj.FileListAbsolute.txt
(+31 files in other folders)
